manifests/media-entertainment/base/seerr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seerr
  labels:
    app: seerr
spec:
  serviceName: seerr
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: seerr
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/seerr-team/seerr:v3.4.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/v1/settings/public
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/v1/settings/public
              port: http
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 3
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /app/config
              subPath:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-iscsi-seerr-config
