manifests/media-entertainment/base/seerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  labels:
    app: seerr
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: seerr
  ipFamilyPolicy: PreferDualStack
