manifests/media-entertainment/base/seerr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  labels:
    gateway: private
spec:
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  hostnames:
    - seerr.lan.stamx.nl
    - jellyseerr.lan.stamx.nl
  rules:
    - backendRefs:
        - name: seerr
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
